Add some features

--- a/views/studentsModule.ejs
+++ b/views/studentsModule.ejs
@@ -7,24 +7,21 @@
 	<title>Students</title>
 </head>
 <body>
-	<h1>Students</h1>
-	<button>Add Student</button>
+	<h1>Students studying <% mid %></h1>
 	<table>
 		<tr>
 			<th>Student ID</th>
 			<th>Name</th>
 			<th>GPA</th>
-			<th>Action</th>
+
 		</tr>
 		<% students.forEach((student) => { %>
 			<tr>
 				<td><%= student.sid %></td>
 				<td><%= student.name %></td>
 				<td><%= student.gpa %></td>
-				<td><a href="/students/delete/<%= student.sid %>">Delete</a></td>
 			</tr>
 		<% }) %>
 	</table>
-	<a href="/">Home</a>
 </body>
 </html>
