--- a/views/students.ejs
+++ b/views/students.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Students</h1>
-	<button>Add Student</button>
+	<button onclick="location.href = '/addStudent'">Add Student</button>
 	<table>
 		<tr>
 			<th>Student ID</th>
